# rust_note

./: .gitignore  README.md
embedded/: Cargo.toml  Makefile
embedded/blink_stm32l052/: Cargo.toml
embedded/blink_stm32l052/src/: main.rs
embedded/timer_stm32l052/: Cargo.toml  memory.x
embedded/timer_stm32l052/.cargo/: config.toml
embedded/timer_stm32l052/src/: main.rs
embedded/uart_stm32l052/: Cargo.toml
embedded/uart_stm32l052/examples/: echo.rs  send_period.rs
embedded/uart_stm32l052/src/: main.rs
playground/: Cargo.toml
playground/play_1000_cans/: .gitignore  Cargo.toml
playground/play_1000_cans/src/: fake_mtlt305d.c  mtlt305d.c  mtlt305d.h  parser_mtlt305d.c  vxcan_1000.sh
playground/play_args/: Cargo.toml
playground/play_args/src/: main.rs  test_args.rs
playground/play_can/: Cargo.toml  vxcan.sh
playground/play_can/src/: main.rs
playground/play_canfd/: Cargo.toml
playground/play_canfd/src/: canfd.rs  main.rs
playground/play_ffi_cantools/: Cargo.toml  MTLT305D_dbc_19.1.51_20190621.dbc  build.rs  fake_mtlt305d.py  vxcan.sh  wrapper.h
playground/play_ffi_cantools/src/: can.rs  main.rs
playground/play_hello/: Cargo.toml
playground/play_mpsc/: Cargo.toml
playground/play_mpsc/src/: main.rs
playground/play_println/: Cargo.toml
playground/play_println/src/: main.rs
playground/play_serial/: Cargo.toml
playground/play_serial/src/: vcom.py
playground/play_serial/src/play_serial_client/: main.rs
playground/play_serial/src/play_serial_server/: main.rs
playground/play_serial2/: Cargo.toml
playground/play_serial2/src/play_serial2_client/: main.rs
playground/play_serial2/src/play_serial2_server/: main.rs
playground/play_thread/: Cargo.toml
playground/play_thread/src/: main.rs
playground/play_udp/: Cargo.toml
playground/play_udp/src/play_udp_client/: main.rs
playground/play_udp/src/play_udp_server/: main.rs
