[package]
name = "timer_stm32l052"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
embedded-time = "0.12.1"
# https://github.com/stm32-rs/stm32-rs/tree/master/devices
stm32l0 = { version = "0.15.1", features = ["stm32l0x2"] }
# https://github.com/stm32-rs/stm32l0xx-hal/blob/master/Cargo.toml
stm32l0xx-hal = { version = "0.10.0", features = ["mcu-STM32L052C8Tx", "rt"] }

[[bin]]
name = "timer_stm32l052"
test = false
bench = false

# [profile.release]
# codegen-units = 1 # better optimizations
# debug = true # symbols are nice and they don't increase the size on Flash
# lto = true # better optimizations
