[package]
name = "play_serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4.0"

[[bin]]
name = "play_serial_server"
path = "src/play_serial_server/main.rs"

[[bin]]
name = "play_serial_client"
path = "src/play_serial_client/main.rs"