[package]
name = "play_udp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "play_udp_server"
path = "src/play_udp_server/main.rs"

[[bin]]
name = "play_udp_client"
path = "src/play_udp_client/main.rs"